--- a/main.html
+++ b/main.html
@@ -8,6 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table border='1' >
+		<caption> Student Details </caption>
+		<tr>
+          <th>NAME</th>
+			  <th>AGE</th>
+			  <th>BRANCH</th>
+		</tr>
+		<tr>
+			  <th>Shaw</th>  <th>20</th>  <th>CSE</th>
+		</tr>
+		<tr>
+			  <th>ADIL</th>  <th>21</th>  <th>ECE</th>
+		</tr>
+			
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
