--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table border='1' >
+	<table border='1'	style = "border:1px solid black; background-color:yellow;"">
 		<caption> Student Details </caption>
 		<tr>
           <th>NAME</th>
