--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table border='1'	style = "border:1px solid black; background-color:yellow;"">
-		<caption> Student Details </caption>
+	<table border='5'	style = "border:1px solid black; background-color:yellow;"">
+		<caption> <b>Student Details </b></caption>
 		<tr>
           <th>NAME</th>
 			  <th>AGE</th>
